# monadic-context-engineering

./: README.md  index.html  pyproject.toml
docs/: index.html  paper.tex
src/: Monadic.ts  README.md  main.ts
src/mce/: __init__.py  __main__.py  llm.py  models.py  monads.py  steps.py
tests/: test_monads.py  test_steps.py
